Add footer widgets and structure to footer section

--- a/overall_footer_begin.html
+++ b/overall_footer_begin.html
@@ -23,7 +23,9 @@
 	</div>
 </div>
 <div class="clearfix"></div>
-
-<!-- BEGIN html_validation -->
-
+{FOOTER_WIDGETS}
+<footer id="ipsLayout_footer" class="ipsClearfix">
+  <div class="ipsLayout_container">
+    <ul class="ipsList_inline ipsType_center ipsSpacer_top" id="elFooterLinks">
+      <!-- BEGIN html_validation -->
 <!-- END html_validation -->
