Refactor footer structure and remove redundant elements

--- a/overall_footer_end.html
+++ b/overall_footer_end.html
@@ -3,36 +3,30 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <body>
 <div>
-	<div>
+	<footer>
 		<div>
-			<div>
-				<div>
-					<div>
-						<div>
-							<del>
-								<ul>
-									<li>
+                  <ul>
 <!-- END html_validation -->
+    </ul>
+    <p id="elCopyright">
+        <span id="elCopyright_userLine"></span>
+        <a rel="nofollow" title="Forumotion Community" href="https://staark.shop/">Powered by Forumotion Community with Staark ❤️</a><br /><a href="https://help.forumgratuit.ro/" style="display:none">Forumotion Community Support forums</a>
+      </p>
+  </div>
+</footer>
+								<!-- BEGIN switch_footer_links -->
+								<ul class="faHide">
+									<li>
+										<!-- BEGIN footer_link -->
+											{switch_footer_links.footer_link.FOOTER_LINK_SEPARATOR}<a name="bottom" class="copyright" href="{switch_footer_links.footer_link.U_FOOTER_LINK_HREF}" rel="{switch_footer_links.footer_link.FOOTER_LINK_REL}" target="{switch_footer_links.footer_link.FOOTER_LINK_TARGET}" title="{switch_footer_links.footer_link.L_FOOTER_LINK_TITLE}">{switch_footer_links.footer_link.L_FOOTER_LINK_TEXT}</a>
+										<!-- END footer_link -->
 									</li>
 								</ul>
+								<!-- END switch_footer_links -->
 							</del>
 						</div>
 					</div>
 				</div>
-                          <footer id="ipsLayout_footer" class="ipsClearfix">
-                            <div class="ipsLayout_container">
-                              <ul class="ipsList_inline ipsType_center ipsSpacer_top" id="elFooterLinks">
-                                <li><a rel="nofollow" href="http://localhost/ips/index.php?/contact/" data-ipsdialog="" data-ipsdialog-remotesubmit="" data-ipsdialog-flashmessage="Thanks, your message has been sent to the administrators." data-ipsdialog-title="Contact Us">Contact Us</a></li>
-                                <li><a rel="nofollow" href="http://localhost/ips/index.php?/cookies/">Cookies</a></li>
-                              </ul>	
-                              <button type="button" id="elWidgetControls" data-action="openSidebar" data-ipstooltip="" title="Manage Blocks" class="ipsButton ipsButton_primary ipsButton_narrow"><i class="fa fa-chevron-right"></i></button>
-                          
-                              <p id="elCopyright">
-                                  <span id="elCopyright_userLine"></span>
-                                  <a rel="nofollow" title="Forumotion Community" href="https://staark.shop/">Powered by Forumotion Community with Staark ❤️</a><br /><a href="https://help.forumgratuit.ro/" style="display:none">Forumotion Community Support forums</a>
-                                </p>
-                            </div>
-                          </footer>
 				{PROTECT_FOOTER}
 			</div>
 		</div>
